crates/rulesteward-fapolicyd/tests/snapshots/fapd-W08__dir-no-slash.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W08] sev=Warning line=1 col=1 span=0..26 :: `dir=/usr/bin` has no trailing slash; fapolicyd matches by byte-prefix, so it can over-match siblings - end the value with `/`
