crates/rulesteward-fapolicyd/tests/snapshots/fapd-W08__subject-and-object-dirs.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=2
[fapd-W08] sev=Warning line=1 col=1 span=0..21 :: `dir=/a` has no trailing slash; fapolicyd matches by byte-prefix, so it can over-match siblings - end the value with `/`
[fapd-W08] sev=Warning line=1 col=1 span=0..21 :: `dir=/b` has no trailing slash; fapolicyd matches by byte-prefix, so it can over-match siblings - end the value with `/`
